[package]
name = "lunox"
version = "0.1.0"
edition = "2021"
authors = ["DitzDev"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
async-trait = "0.1.89"
percent-encoding = "2.3.2"
mime = "0.3.17"
mime_guess = "2.0.5"
serde_urlencoded = "0.7.1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
cookie = "0.18"
flate2 = "1.0"
futures-util = "0.3"
http = "0.2"
http-body = "0.4"
pin-project-lite = "0.2"